# asi_template_imgui

./: .gitmodules  CMakeLists.txt  README.md
libs/SAMP/: samp.h
source/: Gui.cpp  Gui.h  Plugin.cpp  Plugin.h  Utils.h  dllmain.cpp
